--- a/auth.html
+++ b/auth.html
@@ -26,7 +26,7 @@
           <i class="fas fa-graduation-cap"></i>
         </div>
         <h1 class="logo-text">JambeX</h1>
-        <p class="tagline">Your Premium AI Maths Tutor</p>
+        <p class="tagline">Your Premium AI Tutor</p>
       </div>
 
       <!-- Auth Forms Container -->
