--- a/auth.html
+++ b/auth.html
@@ -239,9 +239,11 @@
               <label class="checkbox-container">
                 <input type="checkbox" id="agree-terms" required />
                 <span class="checkmark"></span>
-                I agree to the
-                <a href="#" class="terms-link">Terms & Conditions</a> and
-                <a href="#" class="terms-link">Privacy Policy</a>
+                <span class="checkbox-label">
+                  I agree to the
+                  <a href="#" class="terms-link">Terms & Conditions</a> and
+                  <a href="#" class="terms-link">Privacy Policy</a>
+                </span>
               </label>
             </div>
 
