--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       </div>
     </nav>
 
+
+
+
+
     <!--The body sections-->
     <div class="chat-container">
       <!-- CHAT AREA -->
@@ -55,17 +59,24 @@
 
       <!-- SUBJECT SELECTION (HIDDEN INITIALLY) -->
       <div class="sub-markdown" id="subject-box" style="display: none">
-        <select id="subjects">
-          <option>Select Subject</option>
-          <option>Mathematics</option>
+        <select id="subjects" required>
+          <option value="" selected>Select Subject</option>
+          <option value="Mathematics">Mathematics</option>
           <option disabled>Coming soon</option>
         </select>
 
-        <select id="topic">
-          <option>Select Topic</option>
+        <select name="topic" id="topic" required disabled>
+          <option value="" selected>Select Topic</option>
+          <option value="Algebra">Algebra</option>
+          <option value="Geometry & Mensuration">Geometry & Mensuration</option>
+          <option value="Trigonometry">Trigonometry</option>
+          <option value="Calculus">Calculus</option>
+          <option value="Statistics & Probability">Statistics & Probability</option>
+          <option value="Vectors & Matrices">Vectors & Matrices</option>
+          <option value="Financial Maths">Financial Maths</option>
         </select>
 
-        <select id="subtopic">
+        <select id="subtopic" required>
           <option>Select Subtopic</option>
         </select>
       </div>
@@ -73,7 +84,7 @@
       <!--footer messages-->
       <div class="footer">
         <input type="text" placeholder="Ask a question..." />
-        <button class="send-button">send</button>
+        <button class="send-button" id="send-btn">send</button>
       </div>
     </div>
 
