--- a/auth.html
+++ b/auth.html
@@ -6,6 +6,7 @@
     <title>JambeX - Sign In</title>
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/auth.css" />
+    <link rel="stylesheet" href="/styles/auth-responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
