--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Jambex</title>
 
     <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/auth.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+
   </head>
   <body>
     <!--navbar sections-->
