--- a/auth.html
+++ b/auth.html
@@ -6,6 +6,7 @@
     <title>JambeX - Sign In</title>
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/auth.css" />
+    <link rel="stylesheet" href="/styles/auth-responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -23,10 +24,9 @@
       <!-- Logo Section -->
       <div class="logo-section">
         <div class="logo-icon">
-          <i class="fas fa-graduation-cap"></i>
         </div>
         <h1 class="logo-text">JambeX</h1>
-        <p class="tagline">Your Premium AI Tutor</p>
+        <p class="tagline">Your AI Tutor</p>
       </div>
 
       <!-- Auth Forms Container -->
@@ -125,7 +125,7 @@
 
         <!-- Sign Up Form -->
         <div id="signup-form" class="auth-form">
-          <h2 class="form-title">Join JambeX Premium!</h2>
+          <h2 class="form-title">Join JambeX today!</h2>
           <p class="form-subtitle">
             Create your account and unlock advanced learning features
           </p>
@@ -138,8 +138,8 @@
                 d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
               />
               <path
-                fill="#34A853"
-                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+                fill="#4A853"
+                d="M12 23c2. 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
               />
               <path
                 fill="#FBBC05"
