added landing page

--- a/auth.html
+++ b/auth.html
@@ -35,7 +35,7 @@
         <div id="signin-form" class="auth-form active">
           <h2 class="form-title">Welcome Back!</h2>
           <p class="form-subtitle">
-            Sign in to continue your premium learning experience
+            Sign in to continue your learning experience with JambeX Ai
           </p>
 
           <!-- Google Sign In Button -->
