added landing page

--- a/auth.html
+++ b/auth.html
@@ -23,8 +23,7 @@
 
       <!-- Logo Section -->
       <div class="logo-section">
-        <div class="logo-icon">
-        </div>
+        <div class="logo-icon"></div>
         <h1 class="logo-text">JambeX</h1>
         <p class="tagline">Your AI Tutor</p>
       </div>
@@ -224,7 +223,7 @@
                   placeholder="Confirm your password"
                   required
                 />
-                
+
                 <button
                   type="button"
                   class="password-toggle"
@@ -259,27 +258,6 @@
             </p>
           </div>
         </div>
-      </div>
-
-      <!-- Premium Features -->
-      <div class="premium-features">
-        <div class="feature">
-          <i class="fas fa-crown"></i>
-          <span>Premium AI Tutoring</span>
-        </div>
-        <div class="feature">
-          <i class="fas fa-chart-line"></i>
-          <span>Progress Analytics</span>
-        </div>
-        <div class="feature">
-          <i class="fas fa-infinity"></i>
-          <span>Unlimited Practice</span>
-        </div>
-      </div>
-
-      <!-- Footer -->
-      <div class="auth-footer">
-        <p>&copy; <p class="copyRight"></p> JambeX Premium. All rights reserved.</p>
       </div>
     </div>
 
