--- a/auth.html
+++ b/auth.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/auth.css" />
     <link rel="stylesheet" href="/styles/auth-responsive.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -21,17 +27,16 @@
         <div class="bg-circle bg-circle-3"></div>
       </div>
 
-      <!-- Logo Section -->
-      <div class="logo-section">
-        <div class="logo-icon"></div>
-        <h1 class="logo-text">JambeX</h1>
-        <p class="tagline">Your AI Tutor</p>
+      <!-- Left Sidebar (Blue Panel) -->
+      <div class="left-sidebar">
+        <!-- Optional: Background shapes or patterns can go here -->
       </div>
 
       <!-- Auth Forms Container -->
       <div class="forms-container">
         <!-- Sign In Form -->
         <div id="signin-form" class="auth-form active">
+          <div class="form-header"></div>
           <h2 class="form-title">Welcome Back!</h2>
           <p class="form-subtitle">
             Sign in to continue your learning experience with JambeX Ai
@@ -240,8 +245,13 @@
                 <span class="checkmark"></span>
                 <span class="checkbox-label">
                   I agree to the
-                  <a href="#" class="terms-link">Terms & Conditions</a> and
-                  <a href="#" class="terms-link">Privacy Policy</a>
+                  <a href="/terms.html" class="terms-link" target="_blank"
+                    >Terms & Conditions</a
+                  >
+                  and
+                  <a href="/privacy.html" class="terms-link" target="_blank"
+                    >Privacy Policy</a
+                  >
                 </span>
               </label>
             </div>
