--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
       <div class="footer-links">
         <a href="#">About Us</a>
         <a href="#">Contact</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Service</a>
+        <a href="/privacy.html">Privacy Policy</a>
+        <a href="/terms.html">Terms of Service</a>
       </div>
       <p class="copyright">
         &copy; <span id="year"></span> JambeX. All rights reserved.
