fixed redirect going to index page instead of main

--- a/auth.html
+++ b/auth.html
@@ -27,9 +27,32 @@
         <div class="bg-circle bg-circle-3"></div>
       </div>
 
-      <!-- Left Sidebar (Blue Panel) -->
       <div class="left-sidebar">
-        <!-- Optional: Background shapes or patterns can go here -->
+        <div class="sidebar-content">
+          <div class="sidebar-logo">
+            <h1 class="logo-text" style="color: white; font-size: 3.5rem">
+              JambeX
+            </h1>
+            <p
+              class="tagline"
+              style="color: rgba(255, 255, 255, 0.7); font-size: 1.2rem"
+            >
+              AI Tutor
+            </p>
+          </div>
+          <div class="sidebar-hero-text">
+            <h2>Master Mathematics<br />with AI</h2>
+            <p>
+              Personalized learning, instant feedback, and comprehensive
+              practice for your exams.
+            </p>
+          </div>
+          <!-- Decorative circles in sidebar -->
+          <div class="bg-elements">
+            <div class="bg-circle bg-circle-1"></div>
+            <div class="bg-circle bg-circle-2"></div>
+          </div>
+        </div>
       </div>
 
       <!-- Auth Forms Container -->
