--- a/main.html
+++ b/main.html
@@ -6,12 +6,17 @@
     <title>Jambex</title>
 
     <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="stylesheet" href="/styles/auth.css">
+    <link rel="stylesheet" href="/styles/auth.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-
   </head>
   <body>
     <!--navbar sections-->
@@ -43,50 +48,69 @@
       </div>
     </nav>
 
-
-
-
-
     <!--The body sections-->
-    <div class="chat-container">
-      <!-- CHAT AREA -->
-      <div id="chat-area" class="messages"></div>
+    <div class="main-layout">
+      <div class="chat-container">
+        <!-- CHAT AREA -->
+        <div id="chat-area" class="messages"></div>
 
-      <!-- ACTION BUTTONS -->
-      <div id="welcome-actions" class="actions-btn">
-        <button onclick="handleAction('notes')">📘 Read Notes</button>
-        <button onclick="handleAction('questions')">📝 Past Questions</button>
-        <button onclick="handleAction('ask')">💬 Ask a Question</button>
-      </div>
+        <!-- ACTION BUTTONS & INPUT AREA CONTAINER -->
+        <div class="input-area-container">
+          <!-- ACTION BUTTONS -->
+          <div id="welcome-actions" class="actions-btn">
+            <button onclick="handleAction('notes')" class="action-chip">
+              <i class="fas fa-book"></i> Read Notes
+            </button>
+            <button onclick="handleAction('questions')" class="action-chip">
+              <i class="fas fa-clipboard-list"></i> Past Questions
+            </button>
+            <button onclick="handleAction('ask')" class="action-chip">
+              <i class="fas fa-comment-dots"></i> Ask a Question
+            </button>
+          </div>
 
-      <!-- SUBJECT SELECTION (HIDDEN INITIALLY) -->
-      <div class="sub-markdown" id="subject-box" style="display: none">
-        <select id="subjects" required>
-          <option value="" selected>Select Subject</option>
-          <option value="Mathematics">Mathematics</option>
-          <option disabled>Coming soon</option>
-        </select>
+          <!-- SUBJECT SELECTION (HIDDEN INITIALLY) -->
+          <div class="sub-markdown" id="subject-box" style="display: none">
+            <select id="subjects" required>
+              <option value="" selected>Select Subject</option>
+              <option value="Mathematics">Mathematics</option>
+              <option disabled>Coming soon</option>
+            </select>
 
-        <select name="topic" id="topic" required disabled>
-          <option value="" selected>Select Topic</option>
-          <option value="Algebra">Algebra</option>
-          <option value="Geometry & Mensuration">Geometry & Mensuration</option>
-          <option value="Trigonometry">Trigonometry</option>
-          <option value="Calculus">Calculus</option>
-          <option value="Statistics & Probability">Statistics & Probability</option>
-          <option value="Vectors & Matrices">Vectors & Matrices</option>
-          <option value="Financial Maths">Financial Maths</option>
-        </select>
+            <select name="topic" id="topic" required disabled>
+              <option value="" selected>Select Topic</option>
+              <option value="Algebra">Algebra</option>
+              <option value="Geometry & Mensuration">
+                Geometry & Mensuration
+              </option>
+              <option value="Trigonometry">Trigonometry</option>
+              <option value="Calculus">Calculus</option>
+              <option value="Statistics & Probability">
+                Statistics & Probability
+              </option>
+              <option value="Vectors & Matrices">Vectors & Matrices</option>
+              <option value="Financial Maths">Financial Maths</option>
+            </select>
 
-        <select id="subtopic" required>
-          <option>Select Subtopic</option>
-        </select>
-      </div>
+            <select id="subtopic" required>
+              <option>Select Subtopic</option>
+            </select>
+          </div>
 
-      <!--footer messages-->
-      <div class="footer">
-        <input type="text" placeholder="Ask a question..." />
-        <button class="send-button" id="send-btn">send</button>
+          <!--footer messages-->
+          <div class="footer">
+            <div class="input-wrapper-chat">
+              <input
+                type="text"
+                placeholder="Ask a question..."
+                id="chat-input"
+              />
+              <button class="send-button" id="send-btn">
+                <i class="fas fa-paper-plane"></i>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
