--- a/main.html
+++ b/main.html
@@ -99,6 +99,7 @@
     </div>
 
     <script type="module" src="/js/index.js"></script>
+    <script src="/js/questions.js"></script>
     <script src="/js/script.js"></script>
   </body>
 </html>
