--- a/main.html
+++ b/main.html
@@ -70,7 +70,18 @@
         <select id="subjects" required>
           <option value="" selected>Select Subject</option>
           <option value="Mathematics">Mathematics</option>
-          <option disabled>Coming soon</option>
+          <option value="English Language">English Language</option>
+          <option value="Physics">Physics</option>
+          <option value="Chemistry">Chemistry</option>
+          <option value="Biology">Biology</option>
+          <option value="Commerce">Commerce</option>
+          <option value="Accounting">Accounting</option>
+          <option value="Economics">Economics</option>
+          <option value="Government">Government</option>
+          <option value="Geography">Geography</option>
+          <option value="Christian Religious Knowledge">
+            Christian Religious Knowledge
+          </option>
         </select>
 
         <select name="topic" id="topic" required disabled>
