--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
       <div class="nav-container">
         <div class="logo-group">
           <h2 class="logo-text">JambeX</h2>
-          <span class="tagline"> - Your Ai Maths Tutor</span>
+          <span class="tagline"> Your Ai Powered JAMB learning Assistance</span>
         </div>
 
         <!-- Hamburger Menu Button -->
@@ -32,6 +32,7 @@
           <i class="fas fa-bars"></i>
         </button>
 
+        
         <!-- User Profile / Sign In Section -->
         <div id="auth-section" class="auth-section">
           <!-- Shown when not logged in -->
