--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         box-shadow: var(--shadow-sm);
       }
 
-      .landing-logo {
+      ing-logo {
         display: flex;
         align-items: center;
         gap: 0.5rem;
@@ -42,14 +42,14 @@
 
       .landing-logo h1 {
         font-size: 1.5rem;
-        color: var(--color-primary);
+        color: dodgerblue;
         font-weight: 700;
         margin: 0;
       }
 
       .landing-logo span {
         font-size: 0.8rem;
-        color: var(--color-gray-500);
+        color: red;
       }
 
       .landing-nav-links a {
