modified main page

--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
       <div id="welcome-actions" class="actions-btn">
         <button onclick="handleAction('notes')">📘 Read Notes</button>
         <button onclick="handleAction('questions')">📝 Past Questions</button>
-        <button onclick="handleAction('ask')">💬 Ask a Question</button>
+        <button onclick="handleAction('ask')">💬 FlashCard</button>
       </div>
 
       <!-- SUBJECT SELECTION (HIDDEN INITIALLY) -->
