modified main.html page

--- a/main.html
+++ b/main.html
@@ -55,6 +55,14 @@
 
     <!--The body sections-->
     <div class="chat-container">
+      <!-- MODE HEADER (Hidden by default) -->
+      <div id="mode-header" class="mode-header" style="display: none">
+        <button id="back-to-menu-btn" class="back-btn">
+          <i class="fas fa-arrow-left"></i>
+        </button>
+        <h3 id="mode-title">Mode Name</h3>
+      </div>
+
       <!-- CHAT AREA -->
       <div id="chat-area" class="messages"></div>
 
