updated emjoi to icon

--- a/main.html
+++ b/main.html
@@ -143,9 +143,15 @@
 
       <!-- ACTION BUTTONS -->
       <div id="welcome-actions" class="actions-btn">
-        <button onclick="handleAction('notes')">📘 Read Notes</button>
-        <button onclick="handleAction('questions')">📝 Past Questions</button>
-        <button onclick="handleAction('ask')">💬 FlashCard</button>
+        <button onclick="handleAction('notes')">
+          <i class="fas fa-book"></i> Read Notes
+        </button>
+        <button onclick="handleAction('questions')">
+          <i class="fas fa-file-pen"></i> Past Questions
+        </button>
+        <button onclick="handleAction('ask')">
+          <i class="fas fa-bolt"></i> FlashCard
+        </button>
       </div>
 
       <!-- SUBJECT SELECTION (HIDDEN INITIALLY) -->
